<resources>
    <string name="app_name">MoneyMinder</string>
    <string name="spend_money_label">Ausgaben</string>
    <string name="cancel">Abbrechen</string>
    <string name="edit">Ändern</string>
    <string name="date">Date</string>
    <string name="cashName">Cash Name</string>
    <string name="cashCategory">Cash Category</string>
    <string name="cash">Cash Amount</string>
    <string name="ok">Ok</string>
    <string name="expense">Ausgaben</string>
    <string name="budget">Budget</string>
    <string name="saved">Gesparrt</string>
    <string name="expenseEntryItem">Ausgaben:</string>
    <string name="budgetEntryItem">Budget:</string>
    <string name="savedEntryItem">Gespart:</string>
    <string name="person">Person</string>
    <string name="wont_delete_title">Wirklich löschen?</string>
    <string name="cashback">Cashback</string>
</resources>
