<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewItem"
            type="de.logerbyte.moneyminder.entities.data.viewData.CashViewItem" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/et_date"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:digits="0123456789."
                android:hint="dd.mm.yy"
                android:inputType="date"
                android:singleLine="true"
                android:nextFocusDown="@id/et_cash_name"
                android:maxLength="8"
                android:text="@={viewItem.cashDateField}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashName" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/et_cash_name"
                android:layout_width="124dp"
                android:layout_height="48dp"
                android:singleLine="true"
                android:hint="Ausgabe"
                android:text="@={viewItem.cashNameField}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cashCategory" />

            // todo-SW: two way binding with attributset

            <de.logerbyte.moneyminder.presentation.custom.searchCategoryView.SearchListView
                android:id="@+id/custom_searchlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                searchText="@={viewItem.cashCategoryField}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/et_cash_amount"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:inputType="number"
                android:digits="0123456789,"
                android:hint="0,00"
                android:text="@={viewItem.cashAmountField}" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>
                <TextView
                    android:id="@+id/tv_person"
                    android:text="@string/person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/et_person"
                    android:text="@={viewItem.cashPersonField}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>
</layout>
